--- a/Main/MainWindow.xaml
+++ b/Main/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:main="clr-namespace:Main"
+        xmlns:raster="clr-namespace:Parser.Raster;assembly=Parser"
         mc:Ignorable="d"
         Title="Лабораторная работа №1" Loaded="MainWindow_OnLoaded" WindowState="Maximized"
         FocusManager.FocusedElement="{Binding ElementName=ImgDisplay}"
@@ -23,6 +24,12 @@
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="Black">
             <Button Focusable="False" Content="Открыть" Margin="5" Padding="5" Command="{Binding LoadFileCommand}" Foreground="White"/>
+            <ComboBox HorizontalAlignment="Center" VerticalAlignment="Center" Focusable="False" SelectedValue="{Binding SelectedRenderMode}" SelectedValuePath="Tag" Margin="5">
+                <ComboBoxItem Content="Проволочная модель" Tag="{x:Static raster:RenderMode.Wireframe}"/>
+                <ComboBoxItem Content="Ламберт" Tag="{x:Static raster:RenderMode.FilledTrianglesLambert}"/>
+                <ComboBoxItem Content="Фонг" Tag="{x:Static raster:RenderMode.FilledTrianglesPhong}"/>
+                <ComboBoxItem Content="Гуро" Tag="{x:Static raster:RenderMode.FilledTrianglesGuro}"/>
+            </ComboBox>
         </StackPanel>
 
         <StackPanel Grid.Row="1" Name="ImagePanel" Background="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
