--- a/Main/MainWindow.xaml
+++ b/Main/MainWindow.xaml
@@ -28,7 +28,7 @@
                 <ComboBoxItem Content="Проволочная модель" Tag="{x:Static raster:RenderMode.Wireframe}"/>
                 <ComboBoxItem Content="Ламберт" Tag="{x:Static raster:RenderMode.FilledTrianglesLambert}"/>
                 <ComboBoxItem Content="Фонг" Tag="{x:Static raster:RenderMode.FilledTrianglesPhong}"/>
-                <ComboBoxItem Content="Гуро" Tag="{x:Static raster:RenderMode.FilledTrianglesGuro}"/>
+                <ComboBoxItem Content="Усредненный Фонг" Tag="{x:Static raster:RenderMode.FilledTrianglesAveragePhong}"/>
             </ComboBox>
         </StackPanel>
 
